Closed Bug 660694 Opened 15 years ago Closed 15 years ago

Comparison between signed and unsigned integer expressions in nsDOMBlogBuilder.cpp

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: jdm, Assigned: Ms2ger)

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

/home/t_mattjo/src/firefox/mobilebase/content/base/src/nsDOMBlobBuilder.cpp: In member function ‘virtual nsresult nsDOMMultipartBlob::MozSlice(PRInt64, PRInt64, const nsAString_internal&, PRUint8, nsIDOMBlob**)’: /home/t_mattjo/src/firefox/mobilebase/content/base/src/nsDOMBlobBuilder.cpp:163: warning: comparison between signed and unsigned integer expressions /home/t_mattjo/src/firefox/mobilebase/content/base/src/nsDOMBlobBuilder.cpp:205: warning: comparison between signed and unsigned integer expressions /home/t_mattjo/src/firefox/mobilebase/content/base/src/nsDOMBlobBuilder.cpp:160: warning: unused variable ‘finalLength’
Attached patch Patch v1Splinter Review
Assignee: nobody → Ms2ger
Status: NEW → ASSIGNED
Attachment #536350 - Flags: review?(jonas)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla7
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: