Bug 660694 - Fix comparisons between signed and unsigned integer expressions in nsDOMBlobBuilder.cpp by using unsigned integers consistently; r=sicking